test/arrays/ferguson/semantic-examples/1.4-assign-callexpr-array.good
1.4-assign-callexpr-array.chpl:13: error: illegal lvalue in assignment
